# SH-Mouse-Camera

./: BuildLinked.ps1  CMakeLists.txt  Config.cs  Mod.cs  ModConfig.json  Publish.ps1  README.md  SH-Mouse-Camera.csproj  Sonic Heroes Mouse Camera.slnx  build.sh
Mouse Camera Config/: BuildLinked.ps1  Config.cs  Mod.cs  ModConfig.json  Mouse Camera Config.csproj  Publish.ps1
Mouse Camera Config/Template/: ModBase.cs  ModContext.cs  Startup.cs
Mouse Camera Config/Template/Configuration/: Configurable.cs  Configurator.cs  ConfiguratorMixinBase.cs  Utilities.cs
SH Visual Studio DLL/: SH Visual Studio DLL.sln
SH Visual Studio DLL/SH Visual Studio DLL/: AnaFonksiyon.h  SH Visual Studio DLL.vcxproj  SH Visual Studio DLL.vcxproj.filters  TopluFonksiyon.h  dllmain.cpp  pch.h
SH Visual Studio DLL/SH Visual Studio DLL/Debug/: SH Visual Studio DLL.dll.recipe  vc143.idb  (+1 more)
Sonic Heroes Mouse Camera/: Sonic Heroes Mouse Camera.sln  Sonic Heroes Mouse Camera.vcxproj  Sonic Heroes Mouse Camera.vcxproj.filters  dllmain.cpp
Sonic Heroes Mouse Camera/Sonic Heroes Mouse Camera/: Sonic Heroes Mouse Camera.vcxproj  Sonic Heroes Mouse Camera.vcxproj.filters  dllmain.cpp  pch.h
Sonic Heroes Mouse Camera/Sonic Heroes MouseCam Config/: BuildLinked.ps1  Config.cs  Mod.cs  ModConfig.json  Publish.ps1  Sonic Heroes MouseCam Config.csproj
Template/: ModBase.cs  ModContext.cs  Startup.cs
Template/Configuration/: Configurable.cs  Configurator.cs  ConfiguratorMixinBase.cs  Utilities.cs
include/: BasicCamera.h  BasicCharacter.h  BasicEntity.h  BasicInput.h
src/: main.cpp
(+49 files in other folders)
